2009-05-28  Jens Granseuer  <jensgr@gmx.net>

	* font-viewer/font-thumbnailer.c (main): Timeout value was supposed
	to be 30 seconds; 30 milliseconds is a bit too short to get any
	amount of thumbnailing done (bug #584107)

2009-05-07  Christian Persch  <chpe@gnome.org>

	* font-viewer/ftstream-vfs.c: (vfs_stream_open): Safely printf
	strings. Bug #581731.

2009-03-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* NEWS:
	* configure.in: release 2.26.0

2009-03-03  Thomas H.P. Andersen  <phomes@gmail.com>

	* typing-break/drwright.c: Revert change to GtkUIManager. It broke
	string freeze. Bug #572325

2009-03-02  Bastien Nocera  <hadess@hadess.net>

	* font-viewer/Makefile.am:
	* font-viewer/font-thumbnailer.c (main):
	* font-viewer/totem-resources.c (set_resource_limits),
	(time_monitor), (totem_resources_monitor_start),
	(totem_resources_monitor_stop):
	* font-viewer/totem-resources.h: Stop the font thumbnailer
	eating all the CPU, and limit the resources to 30 seconds
	and 256MB of RAM, which should be plenty (Closes: #573795)

==================== 2.25.92 ====================

2009-03-02  Jens Granseuer  <jensgr@gmx.net>

	* NEWS:
	* configure.in: release 2.25.92

2009-02-26  Thomas H.P. Andersen  <phomes@gmail.com>

	* typing-break/drwright.c: Use GtkUIManager instead of deprecated 
	GtkItemFactory. Bug #572325

2009-02-23  Thomas H.P. Andersen  <phomes@gmail.com>

	* capplets/keyboard/gnome-keyboard-properties-xkbot.c:
	* capplets/keybindings/gnome-keybinding-properties.c:
	* capplets/keybindings/eggcellrendererkeys.h: Replaces deprecated: 
	gtk_box_pack_start_defaults, gtk_widget_set_usize, and GTK_CHECK_*. 
	Bug #572325

2009-02-22  Thomas H.P. Andersen  <phomes@gmail.com>

	* capplets/appearance/appearance-font.c:
	* capplets/mouse/gnome-mouse-properties.c:
	* typing-break/drw-utils.c: Replace deprecated GTK sybmols. Bug #572325

2009-02-18  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Jonas Bonn
