@@ -1,3 +1,9 @@
+2009-06-29  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkb.c,
+	gnome-keyboard-properties-xkbltadd.c: optionally load extras layouts
+	from xk-c (feature of libxklavier 4.0)
+
 ==================== 2.25.92 ====================
 
 2009-02-27  Jens Granseuer  <jensgr@gmx.net>
