@@ -1,3 +1,7 @@
+2009-06-29  Sergey Udaltsov <svu@gnome.org>
+
+	* configure.in: Dependency on libxklavier 4.0
+
 2009-05-28  Jens Granseuer  <jensgr@gmx.net>
 
 	* font-viewer/font-thumbnailer.c (main): Timeout value was supposed
